# zunivers-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
src/: api.rs  lib.rs
src/model/: app.rs  card.rs  challenge.rs  event.rs  evolution.rs  mod.rs  pack.rs  shop.rs  user.rs  vortex.rs
src/structures/: app.rs  card.rs  challenge.rs  event.rs  evolution.rs  mod.rs  post.rs  rayou.rs  shop.rs  user.rs  vortex.rs
tests/: api_test.rs
