[package]
name = "zunivers-rs"
authors = "AlexPresso"
description = "zunivers-rs is an unofficial Rust library to interface with the zunivers (https://zunivers.zerator.com/) game API."
license = "MIT"
keywords = [ "zunivers", "zerator", "card", "game" ]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.195", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
log = "0.4.20"
chrono = { version = "0.4.33", features = ["serde"] }
